# greed

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md  sheepit.toml
.cursor/rules/: plan.mdc  tasks.mdc
.github/workflows/: test.yml
src/: analysis.rs  assert.rs  asset.rs  bool.rs  cli.rs  config.rs  date.rs  enum_display.rs  error.rs  fixture.rs  float.rs  lib.rs  main.rs  num.rs  pager.rs  platform.rs  run.rs  statistics.rs  strategy.rs  tactic.rs  template.rs  trading_days.rs
src/analysis/: fetcher.rs  result.rs  state.rs  time_range.rs
src/cli/: analyze.rs  init.rs  orders.rs  quote.rs  run.rs  status.rs
src/config/: agent.rs  asset.rs  platform.rs  quote_fetcher_config.rs  reader.rs  rules.rs  simple.rs  strategy.rs  tactic.rs
src/config/rules/: merge.rs  target.rs
src/config/simple/: reader.rs  strategy.rs  tactic.rs
src/config/strategy/: do.rs  for.rs  median.rs  rule.rs  when.rs
src/config/tactic/: do.rs  for.rs  median.rs  rule.rs  when.rs
src/fixtures/: config_minimal.toml  config_minimal_asset.toml  config_multi_strategy.toml  config_multi_tactic.toml  config_single_strategy.toml  config_single_tactic.toml  config_strategic.toml  simple_config_minimal.csv
src/platform/: account.rs  alpaca.rs  args.rs  asset_class.rs  bar.rs  bars.rs  id.rs  mock.rs  noop.rs  order.rs  position.rs  quote.rs  request.rs  side.rs
src/platform/alpaca/: convert_account.rs  convert_asset_class.rs  convert_bar.rs  convert_order.rs  convert_position.rs  convert_quote.rs  convert_request.rs  convert_side.rs  convert_symbol.rs  factory.rs
src/platform/bar/: bar_request.rs  time_frame.rs
src/platform/order/: amount.rs  class.rs  order_type.rs  side.rs  status.rs  time_in_force.rs
src/platform/request/: StopLoss.rs  (+2 more)
src/strategy/: action.rs  agent.rs  do.rs  factory.rs  for.rs  nothing.rs  null.rs  path.rs  provider.rs  reader.rs  rule.rs  runner.rs  skip.rs  state.rs  symbols.rs  target.rs  when.rs
src/tactic/: action.rs  do.rs  filter.rs  for.rs  null.rs  rule.rs  skip.rs  state.rs  target.rs  when.rs
(+48 files in other folders)
