[package]
name = "greed"
description = "A rust tool to automate trades 📈"

edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/greed"
version = "0.1.1"

[dependencies]
apca = "0.27.2"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
