[package]
name = "greed"
description = "A rust tool to automate trades 📈"

edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/greed"
version = "0.1.1"

exclude = ["fixtures/"]

[dependencies]
apca = "0.27.2"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "string"] }
clap_complete_command = "0.5.1"
log = "0.4.20"
num-decimal = {version = "0.2.5", default-features = false, features = ["num-v04", "serde"]}
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
simplelog = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.6"
