[package]
name = "greed"
description = "A rust tool to automate trades 📈"

edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/greed"
version = "0.3.1"

exclude = ["fixtures/"]

[dependencies]
apca = "0.29.0"
approx = "0.5.1"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "string"] }
clap_complete_command = "0.5.1"
csv = "1.3.0"
itertools = "0.12.1"
log = "0.4.20"
num-decimal = {version = "0.2.5", default-features = false, features = ["num-v04", "serde"]}
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
simplelog = { version = "0.12.1", features = ["local-offset"] }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.6"
uuid = "1.5.0"
